# Mazu-Project

./: README.md
android_code/LMPD_MAZU_app/: settings.gradle
android_code/LMPD_MAZU_app/app/: build.gradle  google-services.json
esp-code/LMPD_mazu/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp-code/LMPD_mazu/main/: CMakeLists.txt  main.c
esp-code/LMPD_mazu/main/LMPD_biomech/: Biomech_calc.c  Biomech_calc.h
esp-code/LMPD_mazu/main/LMPD_blt/: BLT_spp.c  BLT_spp.h
esp-code/LMPD_mazu/main/LMPD_ch/: MSG_handler.c  MSG_handler.h
esp-code/LMPD_mazu/main/LMPD_gps/: GPS_air.c  GPS_air.h
esp-code/LMPD_mazu/main/LMPD_imu/: IMU_mpu.c  IMU_mpu.h
esp-code/LMPD_mazu/main/LMPD_init/: lmpd_init.c  lmpd_init.h
esp-code/LMPD_mazu/main/LMPD_rom/: ROM_msd.c  ROM_msd.h
esp-code/LMPD_mazu/main/LMPD_rtc/: RTC_ds.c  RTC_ds.h
esp-code/LMPD_mazu/main/LMPD_sen/: SEN_ds.c  SEN_ds.h
pcb/LMPD_Mazu_PCB/schematic/: CP2102N-A02-GQFN28 .kicad_sch  ESP32_WROM_32D.kicad_sch  batery_module.kicad_sch  esquema_eletrico-CP2102N-A02-GQFN28.ps  esquema_eletrico-ESP32_WROOM_32D.ps  esquema_eletrico-batery_module.ps  esquema_eletrico-rtc_ds3231.ps  esquema_eletrico-sd_card.ps  esquema_eletrico-wireless_charging.ps  fp-info-cache  rtc_ds3231.kicad_sch  schematic.kicad_pcb  schematic.kicad_prl  schematic.kicad_pro  schematic.kicad_sch  schematic.kicad_sch-bak  (+3 more)
results/Teste_GPS_IMU/: GPS.CSV  IMU.CSV  NOTI.CSV  REGIST.TXT  TMP.CSV  WAVE.CSV  WAVE_GPS.CSV  WAVE_GPS.xlsx  WAVE_IMU.CSV  WAVE_IMU.xlsx  ~$WAVE_GPS.xlsx
results/Teste_IMU_heading_pich_roll/: Teste_IMU_heading_pich_roll.csv
(+511 files in other folders)
